# trait-kit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_EN.md  clippy.toml  deny.toml  deny.toml.bak  lefthook.yml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  codeql.yml  release.yaml  release.yml
examples/: basic_logger.rs  config_center.rs  layered_app.rs  service_injection.rs
examples/integration-app/: Cargo.toml
examples/integration-app/src/: main.rs
examples/integration-app/tests/: di_chain.rs
examples/trait-kit-example/: Cargo.toml  README.md
examples/trait-kit-example/examples/: confers_loader.rs  confers_macros.rs  default_basic.rs  encryption.rs  hot_reload.rs
scripts/hooks/: pre-commit.sh  setup-hooks.sh
specmark/changes/trait-kit-async-integration/: tasks.md
src/: error.rs  lib.rs  prelude.rs
src/core/: builder.rs  capability.rs  config.rs  error.rs  macros.rs  marker.rs  meta.rs  mod.rs  module.rs
src/i18n/: i18n_impl.rs  i18n_types.rs  mod.rs
src/kit/: async_kit.rs  async_typemap.rs  builder.rs  capability_store.rs  config.rs  config_store.rs  error.rs  graph.rs  kit.rs  mod.rs  typemap.rs
tests/: async_e2e.rs  basic.rs  compile_fail.rs  concurrency.rs  config_center.rs  core_module.rs  e2e_advanced.rs  errors.rs  examples_runner.rs  kit_builder.rs  kit_capability.rs
tests/common/: mod.rs
tests/ui/: builder_not_impl_module_builder.rs  builder_not_impl_module_builder.stderr  capability_not_send_sync.rs  capability_not_send_sync.stderr  kit_config_wrong_order.rs  kit_config_wrong_order.stderr  kit_requirements_wrong_order.rs  kit_requirements_wrong_order.stderr  provide_type_mismatch.rs  provide_type_mismatch.stderr
