[package]
name = "trait-kit"
version = "0.3.0"
edition = "2024"
rust-version = "1.91"
authors = ["Kirky.X"]
repository = "https://github.com/Kirky-X/trait-kit.git"
description = "Module Standard Interface and Capability Management Center — A lightweight Rust library that provides a standard interface for module definition and Kit capability management."
keywords = ["module", "trait", "capability", "kit", "interface"]
license = "MIT"
categories = ["rust-patterns", "development-tools"]
readme = "README.md"

[dependencies]
confers = { version = "0.4", default-features = false, optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
thiserror = { version = "2", default-features = false }
icu = { version = "2.2", optional = true }
writeable = { version = "0.6", optional = true }

[dev-dependencies]
serial_test = "3"
static_assertions = "1"
trybuild = "1"

[features]
default = []
# AsyncKit: Send + Sync async capability management (no extra deps, Rust native async).
async = []
# Level 1: basic confers integration (Store + Config trait).
confers = ["dep:confers", "dep:serde"]
# Level 2: module-level config inheritance (ModuleConfig trait + Config re-export).
# confers 0.4 ships macros as a non-optional workspace member, so this level
# is a semantic marker for trait-kit's ModuleConfig surface.
confers-macros = ["confers"]
# Level 3: hot-reload subscription (maps to confers `watch` feature).
hot-reload = ["confers-macros", "confers/watch"]
# Level 4: encrypted config storage (maps to confers `encryption` feature).
encryption = ["hot-reload", "confers/encryption", "dep:serde", "dep:serde_json"]
# ICU4X-backed internationalization: locale-aware number/date/plural/collation.
i18n = ["dep:icu", "dep:writeable"]
# Interface/implementation separation: register_as / resolve behind a feature gate.
interface = []

[workspace]
resolver = "2"
members = [".", "examples/trait-kit-example"]
default-members = ["."]

