[package]
name = "integration-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
publish = false
description = "Integration app demonstrating trait-kit AsyncKit dependency injection across oxcache/dbnexus/inklog/limiteron/sdforge"

[dependencies]
trait-kit = { path = "../..", default-features = false, features = ["async"] }
# Rule 6: default-features = false + explicit feature opt-in (deterministic deps).
oxcache = { path = "../../../oxcache", default-features = false, features = ["kit", "memory"] }
limiteron = { path = "../../../limiteron", default-features = false, features = ["kit"] }
# dbnexus `kit` does not transitively enable a database driver; the app uses
# `sqlite::memory:`, so we explicitly enable `default` (provides sqlite +
# runtime-tokio-rustls + permission + sql-parser + macros + config-env +
# with-time) alongside `kit`. Rule 6 still honored via default-features = false.
dbnexus = { path = "../../../dbnexus", default-features = false, features = ["default", "kit"] }
sdforge = { path = "../../../sdforge", default-features = false, features = ["kit"] }
# inklog gates `integrations::kit` behind `any(feature = "sqlite"/"postgres"/"mysql")`
# (inklog/src/integrations/mod.rs:16). The app pulls `InklogModule` from
# there, so we enable `sqlite` (the lightest backend). `default-features =
# false` per Rule 6 — we explicitly opt into `kit` + `sqlite` only.
inklog = { path = "../../../inklog", default-features = false, features = ["kit", "sqlite"] }
tokio = { version = "~1.52", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
