[package]
name = "integration-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
publish = false
description = "Integration app demonstrating trait-kit AsyncKit dependency injection across oxcache/dbnexus/inklog/limiteron/sdforge"

[dependencies]
trait-kit = { path = "../..", default-features = false, features = ["async"] }
# Rule 6: default-features = false + explicit feature opt-in (deterministic deps).
oxcache = { path = "../../../oxcache", default-features = false, features = ["kit", "memory"] }
limiteron = { path = "../../../limiteron", default-features = false, features = ["kit"] }
# dbnexus `kit` does not transitively enable a database driver; the app uses
# `sqlite::memory:`, so we explicitly enable the required feature set
# (runtime + sqlite + permission + sql-parser + macros + config-env +
# with-time) alongside `kit`. Rule 6: default-features = false + explicit
# opt-in. Updated after dbnexus default=[] (no implicit feature aggregation).
dbnexus = { path = "../../../dbnexus", default-features = false, features = ["default-no-db", "sqlite", "kit"] }
sdforge = { path = "../../../sdforge", default-features = false, features = ["kit"] }
# inklog gates `integrations::kit` behind `any(feature = "sqlite"/"postgres"/"mysql")`
# (inklog/src/integrations/mod.rs:16). The app pulls `InklogModule` from
# there, so we enable `sqlite` (the lightest backend). `default-features =
# false` per Rule 6 — we explicitly opt into `kit` + `sqlite` only.
inklog = { path = "../../../inklog", default-features = false, features = ["kit", "sqlite"] }
tokio = { version = "~1.52", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }

# 独立 workspace — 此 crate 有 sibling repos 的 path deps（../../oxcache 等），
# 仅在本地开发时存在。与 trait-kit/Cargo.toml 的 workspace.exclude 注释一致。
[workspace]

# Patch crates.io 依赖到本地 path — 解决 trait-kit 版本冲突。
# oxcache/dbnexus/limiteron 等子依赖从 crates.io 拉取 trait-kit 0.3，
# 但本 crate 直接依赖 path 版本的 trait-kit，导致两个版本共存。
# patch 让所有子依赖统一使用本地 path 版本。
[patch.crates-io]
trait-kit = { path = "../.." }
oxcache = { path = "../../../oxcache" }
dbnexus = { path = "../../../dbnexus" }
limiteron = { path = "../../../limiteron" }
sdforge = { path = "../../../sdforge" }
inklog = { path = "../../../inklog" }
